Updating the fix width of the nav elements in order to avoid any kind of shift

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -40,6 +40,7 @@ header nav .brand {
   align-items: center;
   padding-left: 15px;
   margin-left: 15px;
+  width: 20vw;
 }
 
 header nav .brand .logo {
@@ -152,6 +153,7 @@ header nav .tools ul {
   margin: 0;
   padding: 0;
   flex: 1;
+  justify-content: flex-end;
 }
 
 header nav .tools ul li {
@@ -276,6 +278,7 @@ header nav .tools .hamburger-close img {
     background-color: transparent;
     align-items: center;
     margin: 0 12px 0 24px;
+    width: 25vw;
   }
 
   header nav .search {
@@ -289,6 +292,7 @@ header nav .tools .hamburger-close img {
   header nav .sections {
     display: grid;
     padding: 0;
+    width: 50vw;
   }
 
   header nav .sections .sections-list {
